--- a/trunk/099/config/npcdesc.cfg
+++ b/trunk/099/config/npcdesc.cfg
@@ -140,6 +140,7 @@ NpcTemplate  person
 	dress			poor
 	title			<random>
 	noloot			1
+	localized			1
 }
 
 NpcTemplate  townperson
@@ -175,6 +176,7 @@ NpcTemplate  townperson
 	speech 5
 	dress rich
 	title			<random>
+	localized			1
 }
 
 NpcTemplate  questie
