--- a/trunk/099/pkg/combat/loot/itemgroups.cfg
+++ b/trunk/099/pkg/combat/loot/itemgroups.cfg
@@ -1014,3 +1014,40 @@ Group TreasureMapSpecial
 	item	0x09C4	//bottles
 	item	0x09C5	//bottles
 }
+
+group bodyparts
+{
+	item 0x1cdd
+	item 0x1cde
+	item 0x1cdf
+	item 0x1ce0
+	item 0x1ce1
+	item 0x1ce2
+	item 0x1ce3
+	item 0x1ce4
+	item 0x1ce5
+	item 0x1ce6
+	item 0x1ce7
+	item 0x1ce8
+	item 0x1ce9
+	item 0x1cea
+	item 0x1ceb
+	item 0x1cec
+	item 0x1ced
+	item 0x1cee
+	item 0x1cef
+	item 0x1cf0
+}
+
+group bonepiles
+{
+	item 0x0eca
+	item 0x0ecb
+	item 0x0ecc
+	item 0x0ecd
+	item 0x0ece
+	item 0x0ecf
+	item 0x0ed0
+	item 0x0ed1
+	item 0x0ed2
+}
