--- a/trunk/099/pkg/items/containers/itemdesc.cfg
+++ b/trunk/099/pkg/items/containers/itemdesc.cfg
@@ -764,7 +764,7 @@ Container 0x2bdb
 {
 	Name				stocking
 	desc				christmas stocking
-	Gump				0x003D
+	Gump				0x0103
 	MinX				40
 	MaxX				60
 	MinY				20
@@ -777,4 +777,26 @@ Container 0x2bdb
 	OnInsertScript		oninsert_chest
 	CanInsertScript	caninsert_chest
 //	OldObjtype 0x278b
+}
+
+Container 0x3171
+{
+	Name				quiver
+	Desc				elven quiver
+	Gump				0x003D
+	MinX				40
+	MaxX				60
+	MinY				20
+	MaxY				80
+	RequiresAttention	0
+	VendorSellsFor		10
+	VendorBuysFor		4
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
 }
