--- a/trunk/099/pkg/npcs/townfolk/merchants/npcdesc.cfg
+++ b/trunk/099/pkg/npcs/townfolk/merchants/npcdesc.cfg
@@ -66,6 +66,7 @@ NpcTemplate  banker
 	guardignore		1
 	equip			banker
 	title			the banker
+	localized			1
 }
 
 NpcTemplate stablemaster
@@ -102,6 +103,7 @@ NpcTemplate stablemaster
 	dress			poor
 	title			the stablemaster
 	speech			1
+	localized			1
 }
 
 NpcTemplate captain
@@ -138,6 +140,7 @@ NpcTemplate captain
 	equip			shipcaptain
 	title			master sailor
 	speech			1
+	localized			1
 }
 
 NpcTemplate playervendor
@@ -172,6 +175,7 @@ NpcTemplate playervendor
 	Privs			invul
 	Settings			invul
 	speech			1
+	localized			1
 }
 
 NpcTemplate ranger
@@ -211,6 +215,7 @@ NpcTemplate ranger
 	dress			warrior
 	title			the ranger
 	speech			1
+	localized			1
 }
 
 NpcTemplate weaponsmith
@@ -250,6 +255,7 @@ NpcTemplate weaponsmith
 	dress			warrior
 	title			the weaponsmith
 	speech			1
+	localized			1
 }
 
 NpcTemplate fisherman
@@ -289,6 +295,7 @@ NpcTemplate fisherman
 	dress			poor
 	title			the fisherman
 	speech			1
+	localized			1
 }
 
 NpcTemplate shipwright
@@ -328,6 +335,7 @@ NpcTemplate shipwright
 	title			the shipwright
 	dress			rich
 	speech			1
+	localized			1
 }
 
 NpcTemplate farmer
@@ -367,6 +375,7 @@ NpcTemplate farmer
 	title			the farmer
 	dress			poor
 	speech			1
+	localized			1
 }
 
 NpcTemplate armorer
@@ -406,6 +415,7 @@ NpcTemplate armorer
 	title			the armorer
 	dress			warrior
 	speech			1
+	localized			1
 }
 
 NpcTemplate barkeep
@@ -445,6 +455,7 @@ NpcTemplate barkeep
 	title			the barkeep
 	dress			poor
 	speech			1
+	localized			1
 }
 
 NpcTemplate beekeep
@@ -484,6 +495,7 @@ NpcTemplate beekeep
 	title			the beekeeper
 	dress			poor
 	speech			1
+	localized			1
 }
 
 NpcTemplate baker
@@ -523,6 +535,7 @@ NpcTemplate baker
 	title			the baker
 	dress			rich
 	speech			1
+	localized			1
 }
 
 NpcTemplate tinker
@@ -562,6 +575,7 @@ NpcTemplate tinker
 	title			the tinker
 	dress			warrior
 	speech			1
+	localized			1
 }
 
 NpcTemplate bard
@@ -601,6 +615,7 @@ NpcTemplate bard
 	title			the bard
 	dress			rich
 	speech			1
+	localized			1
 }
 
 NpcTemplate butcher
@@ -640,6 +655,7 @@ NpcTemplate butcher
 	title			the butcher
 	dress			poor
 	speech			1
+	localized			1
 }
 
 NpcTemplate cobbler
@@ -679,6 +695,7 @@ NpcTemplate cobbler
 	title			the cobbler
 	dress			poor
 	speech			1
+	localized			1
 }
 
 NpcTemplate jewler
@@ -718,6 +735,7 @@ NpcTemplate jewler
 	title			the jeweler
 	dress			rich
 	speech			1
+	localized			1
 }
 
 NpcTemplate mage
@@ -757,6 +775,7 @@ NpcTemplate mage
 	title			the mage
 	dress			mage
 	speech			1
+	localized			1
 }
 
 NpcTemplate apothecary
@@ -796,6 +815,7 @@ NpcTemplate apothecary
 	title			the apothecary
 	dress			mage
 	speech			1
+	localized			1
 }
 
 NpcTemplate alchemist
@@ -835,6 +855,7 @@ NpcTemplate alchemist
 	title			the alchemist
 	dress			mage
 	speech			1
+	localized			1
 }
 
 NpcTemplate tailor
@@ -874,6 +895,7 @@ NpcTemplate tailor
 	title			the tailor
 	dress			rich
 	speech			1
+	localized			1
 }
 
 NpcTemplate leatherworker
@@ -913,6 +935,7 @@ NpcTemplate leatherworker
 	title			the leatherworker
 	dress			warrior
 	speech			1
+	localized			1
 }
 
 NpcTemplate provisioner
@@ -952,6 +975,7 @@ NpcTemplate provisioner
 	title			the provisioner
 	dress			rich
 	speech			1
+	localized			1
 }
 
 NpcTemplate carpenter
@@ -991,6 +1015,7 @@ NpcTemplate carpenter
 	title			the carpenter
 	dress			poor
 	speech			1
+	localized			1
 }
 
 NpcTemplate bowyer
@@ -1030,6 +1055,7 @@ NpcTemplate bowyer
 	title			the bowyer
 	dress			warrior
 	speech			1
+	localized			1
 }
 
 NpcTemplate architect
@@ -1069,6 +1095,7 @@ NpcTemplate architect
 	title			the architect
 	dress			rich
 	speech			1
+	localized			1
 }
 
 NpcTemplate scribe
@@ -1108,6 +1135,7 @@ NpcTemplate scribe
 	title			the scribe
 	dress			mage
 	speech			1
+	localized			1
 }
 
 NpcTemplate decorator
@@ -1147,4 +1175,5 @@ NpcTemplate decorator
 	title			the decorator
 	dress			rich
 	speech			1
+	localized			1
 }
