--- a/trunk/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
+++ b/trunk/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
@@ -1,4 +1,5 @@
 ///////////////////
+///////////////////
 //  blacksmithy.cfg
 //  Contains entries for items that can be created or repaired by
 //  the blacksmithy skill.  Entries are...
@@ -144,16 +145,6 @@ blacksmithy 0x0f43
 	bulk_deed		1
 }
 
-blacksmithy 0x2d2d
-{ 
-	Name			assassin spike
-	material		10
-	skill		30
-	time			2
-	hasquality	1
-	bulk_deed		1
-}
-
 
 
 
@@ -211,16 +202,6 @@ blacksmithy 0X13b5
 	bulk_deed		1
 }
 
-blacksmithy 0X26bb
-{ 
-	Name			bone harvester
-	material		30
-	skill		65
-	time			4
-	hasquality	1
-	bulk_deed		1
-}
-
 
 
 
@@ -251,56 +232,6 @@ blacksmithy 0X13b7
 blacksmithy 0x1404
 { 
 	Name			war fork
-	material		30
-	skill		65
-	time			4
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0X26c0
-{ 
-	Name			lance
-	material		40
-	skill		85
-	time			5
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0x2d2e
-{ 
-	Name			leafblade
-	material		30
-	skill		65
-	time			4
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0x2d2f
-{ 
-	Name			war cleaver
-	material		30
-	skill		65
-	time			4
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0x2d33
-{ 
-	Name			radiant scimitar
-	material		30
-	skill		65
-	time			4
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0x2d35
-{ 
-	Name			elven machete
 	material		30
 	skill		65
 	time			4
@@ -348,26 +279,6 @@ blacksmithy 0X143a
 blacksmithy 0x143c
 { 
 	Name			hammer pick
-	material		30
-	skill		65
-	time			4
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0X26bc
-{ 
-	Name			scepter
-	material		30
-	skill		65
-	time			4
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0X2d30
-{ 
-	Name			diamond mace
 	material		30
 	skill		65
 	time			4
@@ -471,66 +382,6 @@ blacksmithy 0X143e
 	bulk_deed		1
 }
 
-blacksmithy 0X26ba
-{ 
-	Name			scythe
-	material		40
-	skill		85
-	time			5
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0X26bd
-{ 
-	Name			bladed staff
-	material		40
-	skill		85
-	time			5
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0X26c1
-{ 
-	Name			crescent blade
-	material		40
-	skill		85
-	time			5
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0X26ce
-{ 
-	Name			paladin sword
-	material		40
-	skill		85
-	time			5
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0X2d32
-{ 
-	Name			rune blade
-	material		40
-	skill		85
-	time			5
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0X2d34
-{ 
-	Name			ornate axe
-	material		40
-	skill		85
-	time			5
-	hasquality	1
-	bulk_deed		1
-}
-
 
 
 ///////////////////
@@ -560,36 +411,6 @@ blacksmithy 0x0f63
 blacksmithy 0x0e87
 { 
 	Name			pitchfork
-	material		40
-	skill		85
-	time			5
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0x26be
-{ 
-	Name			pike
-	material		40
-	skill		85
-	time			5
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0x26bf
-{ 
-	Name			double bladed staff
-	material		40
-	skill		85
-	time			5
-	hasquality	1
-	bulk_deed		1
-}
-
-blacksmithy 0x2d2c
-{ 
-	Name			spellblade
 	material		40
 	skill		85
 	time			5
@@ -919,6 +740,304 @@ blacksmithy 0x1412
 	bulk_deed		1
 }
 
+
+/////////////////
+// Age of Shadows
+////////////////
+
+blacksmithy 0X26ba
+{ 
+	Name			scythe
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0X26bb
+{ 
+	Name			bone harvester
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x26bc
+{ 
+	Name			scepter
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0X26bd
+{ 
+	Name			bladed staff
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x26be
+{ 
+	Name			pike
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x26bf
+{ 
+	Name			double bladed staff
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x26c0
+{ 
+	Name			lance
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0X26c1
+{ 
+	Name			crescent blade
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0X26ce
+{ 
+	Name			paladin sword
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+
+//////////////
+// Samurai Empire
+////////////////
+
+// Weapons
+blacksmithy 0x27a4
+{ 
+	Name			wakizashi
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x27a2
+{ 
+	Name			Nodachi
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x27a3
+{ 
+	Name			tessen
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x27a7
+{ 
+	Name			lajatang
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X27a9
+{ 
+	Name			daisho
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X27ab
+{ 
+	Name			tekagi
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X27ad
+{ 
+	Name			kama
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X27af
+{ 
+	Name			sai
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+// Armor
+blacksmithy 0x27c8
+{ 
+	Name			plate do
+	material		60
+	skill		90
+	time			6
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x27d3
+{ 
+	Name			plate suneate
+	material		50
+	skill		85
+	time			6
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x27d8
+{ 
+	Name			plate haidate
+	material		50
+	skill		85
+	time			6
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x27cb
+{ 
+	Name			plate hiro sode
+	material		35
+	skill		80
+	time			6
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X27c4
+{ 
+	Name			plate mempo
+	material		25
+	skill		75
+	time			6
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x27d0
+{ 
+	Name			plate kabuto
+	material		40
+	skill		80
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x236c
+{ 
+	Name			plate kabuto
+	material		40
+	skill		80
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x27cc
+{ 
+	Name			plate jingasa
+	material		40
+	skill		80
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x2777
+{ 
+	Name			plate jingasa
+	material		40
+	skill		80
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x27bf
+{ 
+	Name			mail hatsuburi
+	material		20
+	skill		65
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x27c0
+{ 
+	Name			plate hatsuburi
+	material		40
+	skill		80
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+
+
+/////
+// Mondain's Legacy
+
+// Circlets
 blacksmithy 0x2b6e
 { 
 	Name			circlet
@@ -948,3 +1067,466 @@ blacksmithy 0x2b70
 	hasquality	1
 	bulk_deed		1
 }
+
+// Weapons
+blacksmithy 0x2d2c
+{ 
+	Name			spellblade
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2d2d
+{ 
+	Name			assassin spike
+	material		10
+	skill		30
+	time			2
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2d2e
+{ 
+	Name			leafblade
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2d2f
+{ 
+	Name			war cleaver
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2d30
+{ 
+	Name			diamond mace
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0X2d32
+{ 
+	Name			rune blade
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2d33
+{ 
+	Name			radiant scimitar
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0X2d34
+{ 
+	Name			ornate axe
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0x2d35
+{ 
+	Name			elven machete
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		1
+}
+
+//////////////////
+// Stygian Abyss
+//////////////////
+
+// Armor
+blacksmithy 0x4052
+{ 
+	Name			platemail chest
+	material		70
+	skill		90
+	time			6
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x4056
+{ 
+	Name			platemail leggings
+	material		50
+	skill		85
+	time			6
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x4054
+{ 
+	Name			platemail kilt
+	material		65
+	skill		85
+	time			6
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x4050
+{ 
+	Name			platemail arms
+	material		50
+	skill		80
+	time			6
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x42de
+{ 
+	Name			plate talons
+	material		25
+	skill		75
+	time			6
+	hasquality	1
+	bulk_deed		0
+}
+
+// Shields
+blacksmithy 0X4202
+{ 
+	Name			small plate shield
+	material		20
+	skill		40
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X4203
+{ 
+	Name			medium plate shield
+	material		30
+	skill		50
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X4204
+{ 
+	Name			large plate shield
+	material		50
+	skill		70
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+// Weapons
+
+// light
+blacksmithy 0X406a
+{ 
+	Name			gargish dagger
+	material		10
+	skill		30
+	time			2
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48ae
+{ 
+	Name			gargish cleaver
+	material		10
+	skill		30
+	time			2
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48b6
+{ 
+	Name			gargish butcher knife
+	material		10
+	skill		30
+	time			2
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0x4068
+{ 
+	Name			dual short axes
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48cc
+{ 
+	Name			gargish tessen
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48ce
+{ 
+	Name			gargish tekagi
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48d0
+{ 
+	Name			gargish daisho
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X4067
+{ 
+	Name			boomerang
+	material		20
+	skill		50
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X406c
+{ 
+	Name			cyclone
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+// medium
+blacksmithy 0X406e
+{ 
+	Name			disc mace
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X4072
+{ 
+	Name			bloodblade
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X4074
+{ 
+	Name			dread sword
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X4076
+{ 
+	Name			shortblade
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48ba
+{ 
+	Name			gargish katana
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48bc
+{ 
+	Name			gargish kryss
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48be
+{ 
+	Name			gargish war fork
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48c2
+{ 
+	Name			gargish maul
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48c6
+{ 
+	Name			gargish bone harvester
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48ca
+{ 
+	Name			gargish lance
+	material		30
+	skill		65
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+// heavy
+blacksmithy 0X406b
+{ 
+	Name			soul glaive
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X406d
+{ 
+	Name			dual pointed spear
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X4075
+{ 
+	Name			gargish talwar
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48b0
+{ 
+	Name			gargish battle axe
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48b2
+{ 
+	Name			gargish axe
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48b4
+{ 
+	Name			gargish bardiche
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48c0
+{ 
+	Name			gargish war hammer
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48c4
+{ 
+	Name			gargish scythe
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
+blacksmithy 0X48c8
+{ 
+	Name			gargish pike
+	material		40
+	skill		85
+	time			5
+	hasquality	1
+	bulk_deed		0
+}
+
