--- a/trunk/099/pkg/skills/craftingskills/tailoring/leather_items.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tailoring/leather_items.cfg
@@ -360,6 +360,15 @@ leather 0x2fcb
 	hasquality	1
 }
 
+leather 0x315f
+{
+	Name		woodland belt
+	material	20
+	skill	65
+	time		1
+	hasquality	1
+}
+
 
 
 
@@ -424,7 +433,7 @@ leather 0x2b79
 
 
 ///////////////////
-//  elven footwear
+//  elven misc
 ///////////////////
 
 leather 0x317a
@@ -433,5 +442,41 @@ leather 0x317a
 	material	8
 	skill	50
 	time		1
+}
+
+leather 0x3171
+{
+	Name		quiver
+	material	4
+	skill	40
+	time		1
+	hasquality	0
+}
+
+/////////////////
+// leather yoroi
+/////////////////
+
+/////////////////
+// ninja gear
+/////////////////
+leather 0X27f5
+{ 
+	Name			dart thrower
+	material		30
+	skill		90
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
+leather 0X2790
+{ 
+	Name			shuriken thrower
+	material		30
+	skill		90
+	time			4
+	hasquality	1
+	bulk_deed		0
 }
 
