--- a/trunk/099/pkg/world/spawners/guardspawner/npcdesc.cfg
+++ b/trunk/099/pkg/world/spawners/guardspawner/npcdesc.cfg
@@ -41,6 +41,7 @@ npctemplate guardspawner_townguard
 	virtue			-10
 	nocorpse			1
 	equip			townguard
+	localized			1
 }
 
 npctemplate guardspawner_post_guard
@@ -78,4 +79,5 @@ npctemplate guardspawner_post_guard
 	virtue			-10
 	nocorpse			1
 	equip			townguard
+	localized			1
 }
